stacking by order of nodes, not by z-index. background-color issue solved by making container-max position relative

--- a/resources/scss/ceres/widgets/Common/_background-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_background-widget.scss
@@ -1,12 +1,7 @@
 .widget-background {
-    z-index: auto;
-
-    > div:first-child {
-        z-index: 0;
-    }
 
     > .container-max {
-        z-index: 1;
+        position: relative;
         padding-right: 0;
         padding-left: 0;
     }
